--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "https": "^1.0.0",
     "json-server": "^0.16.3",
     "xmlhttprequest": "^1.8.0"
   }
